# nix-dotfiles

./: README.org  config.nix  flake.nix  hardware.nix  home.nix
.github/workflows/: workflows.yml
conf/: emacs.el
dot_config/river/: CHANGELOG.md  cabal.project.local  init
dot_config/river/app/: Main.hs
modules/: default.nix
modules/base/: config.nix  hardware.nix  home.nix
modules/base/conf/: emacs.el
modules/browsers/: browsers.nix
modules/conf/: config.nu  dunstrc  emacs.el  foot.ini  fuzzel.ini  gitconfig  i3bar-river.toml  i3status-rust.toml
modules/custom/i3bar-river/: i3bar-river.nix
modules/programs/: emacs.el  emacs.nix  firefox.nix  foot.nix  fuzzel.nix  i3bar-river.nix
modules/programs/dunst/: default.nix
modules/programs/foot/: default.nix
modules/programs/fuzzel/: default.nix
modules/programs/git/: default.nix
modules/programs/i3bar-river/: default.nix
modules/programs/i3status-rust/: default.nix
modules/programs/nu/: default.nix
river/: init  river-hs.cabal  wallpaper.fish
river/app/: Main.hs
river/src/: River.hs
river/tests/: Tests.hs
